--- a/CSS/index.css
+++ b/CSS/index.css
@@ -279,7 +279,7 @@ footer{
     font-size: 20px;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 980px){
     header{
         width: 100%;
     }
@@ -367,7 +367,139 @@ footer{
     }
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 768px){
+    .anclas{
+        display: none;   
+    }
+    header{
+        width: 100%;
+    }
+    .logo{
+        width: 70%;
+        height: 100%;
+    }
+    .logo > h1{
+        width: 100%;
+        font-size: 25px;
+        display: flex;
+        justify-content: start;
+        margin-left: 20px;
+    }
+    .movil{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .movil > div{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .movil > div > a{
+        color: #ffffff;
+        text-decoration: none;
+    }
+    .movil > summary{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+    }
+    .movil > summary > div{
+        width: 50px;
+        height: 5px;
+        background-color: #0F866F;
+    }
+    .block1-presentacion{
+        height: 55rem;
+    }
+    .text-presentacion > h1{
+        font-size: 25px;
+        margin-top: 50px;
+    }
+    .text-presentacion > p{
+        font-size: 17px;
+    }
+    .services{
+        height: 40rem;
+    }
+    .title-services > h1{
+        font-size: 30px;
+    }
+    .cards{
+        display: grid;
+        grid-template-columns: repeat(2, 150px);
+        grid-template-rows: repeat(3, 200px);
+        gap: 50px;
+        justify-content: center;
+    }
+    .cards > div{
+        width: 150px;
+        height: 200px;
+    }
+    .card1,
+    .card2,
+    .card3,
+    .card4{
+        background-size: 150px 200px; 
+    }
+    .card1 >h1,
+    .card2 >h1,
+    .card3 >h1,
+    .card4 >h1{
+        font-size: 20px;
+    }
+    .cards > div > p{
+        font-size: 15px;
+    }
+
+    .principles{
+        height: 25rem;
+    }
+    .principles > div:nth-child(1){
+        font-size: 20px;
+    }
+    .principles > div:nth-child(2){
+        display: flex;
+        flex-direction: column;
+    }
+    .principles > div:nth-child(2) > div{
+        width: 100%;
+    }
+    .principles > div:nth-child(2) > div > h2{
+        font-size: 20px;
+    }
+    .principles > div:nth-child(2) > div > p{
+        font-size: 17px;
+    }
+    .principles > div:nth-child(2) > div:nth-child(2){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .video{
+        margin-top: 3rem;
+        width: 200px;
+        height: 100px;
+    }
+    .instagram > div:nth-child(1) > h1{
+        font-size: 25px;
+    }
+    .instagram > div:nth-child(1) > img{
+        width: 40px;
+        height: 40px;
+    }
+    .instagram > div:nth-child(2) > p{
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width: 480px){
     .anclas{
         display: none;   
     }
